[gd_scene load_steps=7 format=3 uid="uid://c8vxi8peucg51"]

[ext_resource type="Script" uid="uid://ch8tpfffx5kyr" path="res://addons/agent/ui/role/edit_function_item.gd" id="1_xswvj"]
[ext_resource type="Texture2D" uid="uid://c7k1lmqcefawo" path="res://addons/agent/icons/newicon/Icon_done.svg" id="2_twdtp"]
[ext_resource type="Texture2D" uid="uid://ba3i6c5vgyrb" path="res://addons/agent/icons/newicon/Icon_minusfill.svg" id="3_awarx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ga12p"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.14509805, 0.14509805, 0.14509805, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvfk6"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.078431375, 0.078431375, 0.078431375, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yvfk6"]

[node name="EditFunctionItem" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_ga12p")
script = ExtResource("1_xswvj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ActiveIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.13725491, 0.8156863, 0.6313726, 1)
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture = ExtResource("2_twdtp")
expand_mode = 1
stretch_mode = 5

[node name="DisactiveIcon" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.92156863, 0.4392157, 0.27058825, 1)
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
texture = ExtResource("3_awarx")
expand_mode = 1
stretch_mode = 5

[node name="FunctionName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "function name"

[node name="FunctionReadonly" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yvfk6")
text = "只读"

[node name="FunctionDescription" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "工具介绍"

[node name="FucntionActiveButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "启用/禁用工具"
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_yvfk6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yvfk6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_yvfk6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yvfk6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yvfk6")
